# llm-git-commit

./: .gitignore  README.md  flake.nix  llm_git_commit.py  pyproject.toml
.github/workflows/: build-and-publish.yml
llm_git_commit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/llm_git_commit/: llm_git_commit.py
